force-app/main/default/objects/Lead_Sync_Log__c/Lead_Sync_Log__c.object-meta.xml
<CustomObject>
    <label>Lead Sync Log</label>
    <pluralLabel>Lead Sync Logs</pluralLabel>
    <nameField>
        <label>Sync Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>SYNC-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>