force-app/main/default/objects/Lead_Sync_Log__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <label>Company</label>
    <type>Text</type>
    <length>255</length>
</CustomField>