force-app/main/default/objects/Lead_Sync_Log__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <label>Contact Name</label>
    <type>Text</type>
    <length>255</length>
</CustomField>