force-app/main/default/objects/Lead_Sync_Log__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <label>Error Message</label>
    <description>Native Salesforce error text (sfErrors) or backend message when Status = Failed. Empty on success.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>