force-app/main/default/objects/Lead_Sync_Log__c/fields/EventName__c.field-meta.xml
<CustomField>
    <fullName>EventName__c</fullName>
    <label>Event</label>
    <type>Text</type>
    <length>255</length>
</CustomField>