force-app/main/default/objects/Lead_Sync_Log__c/fields/LS_LeadId__c.field-meta.xml
<CustomField>
    <fullName>LS_LeadId__c</fullName>
    <label>LeadSuccess Lead Id</label>
    <description>GUID (KontaktViewId Id) of the source lead in LeadSuccess/Convey.</description>
    <type>Text</type>
    <length>50</length>
    <externalId>true</externalId>
</CustomField>