force-app/main/default/objects/Lead_Sync_Log__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>Record Type</label>
    <description>Which Salesforce object shape this sync attempt targeted — not a Salesforce Record Type, just this log's own label for the transfer mode (see LSPortal's per-event "Account + Contact" toggle).</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
                <default>true</default>
                <label>Lead</label>
            </value>
            <value>
                <fullName>Account + Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>