force-app/main/default/objects/Lead_Sync_Log__c/fields/SyncedAt__c.field-meta.xml
<CustomField>
    <fullName>SyncedAt__c</fullName>
    <label>Synced At</label>
    <description>When this sync attempt happened (set by the backend, not CreatedDate, so retries and backfills keep the real event time).</description>
    <type>DateTime</type>
    <required>true</required>
</CustomField>