force-app/main/default/objects/Lead_Sync_Log__c/fields/TargetAccountId__c.field-meta.xml
<CustomField>
    <fullName>TargetAccountId__c</fullName>
    <label>Target Account Id</label>
    <description>Id of the Account this Contact was matched or created under — only set for Account+Contact mode.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>