force-app/main/default/objects/Lead_Sync_Log__c/fields/TargetRecordId__c.field-meta.xml
<CustomField>
    <fullName>TargetRecordId__c</fullName>
    <label>Target Record Id</label>
    <description>Id of the Lead (Lead mode) or Contact (Account+Contact mode) created/updated by this sync attempt. Empty when Status = Failed.</description>
    <type>Text</type>
    <length>18</length>
</CustomField>